-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 3.3.0-beta1
-
None
-
Windows 7 64 bit
- Start Creator with clean settings.
- Open an existing project.
- Close the project.
- Select "File" -> "New File or Project..." from the menu.
- Select a project template and click "Choose...".
For creating the project, Creator will suggest the source directory of the project from step 2.
I think this is wrong because it might mess with completely unrelated projects. I'd prefer using the parent of that directory or even the user's home directory.
For Gerrit Dashboard: QTCREATORBUG-13366 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
99385,3 | Make project dir default | 3.3 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |