Make project dir default

The project dir defaults to the home directory.

Task-number: QTCREATORBUG-13366
Change-Id: I5a34ae458cacde9e12df50e0796ca7d236bb123e
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@theqtcompany.com>